--- a/src/main/resources/mysql-config.properties
+++ b/src/main/resources/mysql-config.properties
@@ -1,4 +1,5 @@
-jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
+#jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
+jdbcUrl=jdbc:mysql://127.0.0.1:3306/ps
 user=root
 password=root
 maxPoolSize=100
