--- a/src/main/resources/mysql-config.properties
+++ b/src/main/resources/mysql-config.properties
@@ -1,7 +1,6 @@
-#jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
-jdbcUrl=jdbc:mysql://127.0.0.1:3306/ps
-user=root
-password=root
+jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
+user=lab
+password=2014110421
 maxPoolSize=100
 minPoolSize=10
 initialPoolSize=1
