修改持久化类JPA注解

--- a/src/main/resources/mysql-config.properties
+++ b/src/main/resources/mysql-config.properties
@@ -1,3 +1,6 @@
+#jdbcUrl=jdbc:mysql://127.0.0.1:3306/ps
+#user=root
+#password=
 jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
 user=lab
 password=2014110421
