--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>elasticsearch-releases</id>
+            <url>https://maven.elasticsearch.org/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!--引入Elasticsearch Jar文件-->
@@ -32,6 +44,13 @@
             <artifactId>elasticsearch</artifactId>
             <version>2.4.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.plugin</groupId>
+            <artifactId>shield</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -148,8 +167,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.5</version>
         </dependency>
-
-
 
 
     </dependencies>
