修改数据库配置

--- a/src/main/resources/mysql-config.properties
+++ b/src/main/resources/mysql-config.properties
@@ -1,9 +1,9 @@
-jdbcUrl=jdbc:mysql://127.0.0.1:3306/ps
-user=root
-password=2014110419
-#jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
-#user=lab
-#password=2014110421
+#jdbcUrl=jdbc:mysql://127.0.0.1:3306/ps
+#user=root
+#password=2014110419
+jdbcUrl=jdbc:mysql://101.200.87.22:3306/ps
+user=lab
+password=2014110421
 maxPoolSize=100
 minPoolSize=10
 initialPoolSize=1
